--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   height: 100vh;
   width: 100vw;
+  color: white;
 }
 
 #box {
@@ -22,4 +23,19 @@ body {
   top: -1px;
   transform: rotate(45deg);
   transform-origin: 1px 1px;
+}
+
+.text {
+  position: relative;
+  z-index: 1;
+}
+
+.text:after {
+  content: "";
+  height: 2px;
+  background-color: white;
+  position: absolute;
+  z-index: 2;
+  width: 20%;
+  transform: rotate(135deg) translateX(37%) translateY(-378%);
 }
