Enhance Cart component
Dynamic styling & layout
  - Style payment options to indicate active/inactive states.
  - Include display for product image, amount, and total.
  - Allow ability to change amount with select options.
  - Add ability to return to shop.

Changes to index.css
  - Add smooth hover animations to highlight button click.
  - Remove border/outline on select focues.

--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,22 @@ body {
   width: 50%;
   transform: rotate(135deg) translateX(51%) translateY(-580%);
 }
+
+.total-pay-options > *:hover .left .active {
+  border-color: rgb(213, 213, 213);
+  transform: scale(1.2);
+}
+
+.total-pay-options > *:hover .left .inactive {
+  background-color: rgb(181, 181, 181);
+}
+
+.active {
+  transition: transform 0.3s ease;
+}
+
+.item-amount:focus {
+  outline: none;
+  border: none;
+  text-align: center;
+}
